feat: Added update keys for snippets
