# docs/swagger.json
@@ -243,7 +243,7 @@
                 "body": {
                     "description": "Markdown body to save.",
                     "type": "string",
-                    "maxLength": 1024,
+                    "maxLength": 64000,
                     "minLength": 1,
                     "example": "# Markdown Snippet\nSome Text"
                 },
@@ -298,6 +298,11 @@
                     "description": "Markdown snippet title.",
                     "type": "string",
                     "example": "SouLxBurN Is Awesome!"
+                },
+                "updateKey": {
+                    "description": "Update hash key allowing the snippet to be updated.",
+                    "type": "string",
+                    "format": "uuid"
                 }
             }
         },
@@ -306,13 +311,14 @@
             "required": [
                 "body",
                 "id",
-                "title"
+                "title",
+                "updateKey"
             ],
             "properties": {
                 "body": {
                     "description": "Markdown body to save.",
                     "type": "string",
-                    "maxLength": 1024,
+                    "maxLength": 64000,
                     "minLength": 1,
                     "example": "# Markdown Snippet\nSome Text"
                 },
@@ -327,6 +333,11 @@
                     "maxLength": 64,
                     "minLength": 1,
                     "example": "SouLxBurN Is Awesome!"
+                },
+                "updateKey": {
+                    "description": "UpdateKey required for updating snippet.",
+                    "type": "string",
+                    "format": "uuid"
                 }
             }
         }
